third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/main_call_entry.exp
module 0x2::X {
    public entry fun foo() {
        ()
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
    use 0x2::X;
    public entry fun <SELF>_0() {
        X::foo();
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ main_call_entry.move:7:76
  │
7 │ module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
  │                                                                            ^
  │                                                                            │
  │                                                                            Unexpected '<'
  │                                                                            Expected an identifier
